native/src/tarantool_box.h

    struct tarantool_space_iterator_request
    {
        uint32_t space_id;
        int type;
        const char* key;
        size_t key_size;
    };
    struct tarantool_index_request
    {
        uint32_t space_id;
        uint32_t index_id;
        const char* tuple;
        size_t tuple_size;
    };
    struct tarantool_index_count_request
    {
        uint32_t space_id;
        uint32_t index_id;
        const char* key;
        size_t key_size;
        int iterator_type;
    };
    struct tarantool_index_id_request
    {
        uint32_t space_id;
        const char* name;
        size_t name_length;
    };
    struct tarantool_index_update_request
    {
        uint32_t space_id;
        uint32_t index_id;
        const char* key;
        size_t key_size;
        const char* operations;
        size_t operations_size;
    };
    struct tarantool_call_request
    {
        const char* function;
        uint32_t function_length;
        const char* input;
        size_t input_size;
    };
    struct tarantool_evaluate_request
    {
        const char* expression;
        uint32_t expression_length;
        const char* input;
        size_t input_size;
    };
    struct tarantool_index_iterator_request
    {
        uint32_t space_id;
        uint32_t index_id;
        int type;
        const char* key;
        size_t key_size;
    };
    struct tarantool_index_select_request
    {
        uint32_t space_id;
        uint32_t index_id;
        const char* key;
        size_t key_size;
        uint32_t offset;
        uint32_t limit;
        int iterator_type;
    };
    struct tarantool_index_id
    {
        uint32_t space_id;
        uint32_t index_id;
    };
    struct tarantool_native_module_request
    {
        char* module_name;
        size_t module_name_length;
    };
    struct tarantool_native_function_request
    {
        char* module_name;
        char* function_name;
        size_t module_name_length;
    };