native/src/tarantool_factory.h

typedef struct mempool tarantool_factory_mempool;
 
typedef struct small_alloc tarantool_factory_small_alloc;
 
typedef struct interactor_memory tarantool_factory_interactor_memory;
    struct tarantool_factory
    {
        tarantool_factory_small_alloc* tarantool_datas;
        tarantool_factory_mempool* tarantool_messages;
        tarantool_factory_mempool* tarantool_call_requests;
        tarantool_factory_mempool* tarantool_evaluate_requests;
        tarantool_factory_mempool* tarantool_space_requests;
        tarantool_factory_mempool* tarantool_space_count_requests;
        tarantool_factory_mempool* tarantool_space_select_requests;
        tarantool_factory_mempool* tarantool_space_update_requests;
        tarantool_factory_mempool* tarantool_space_upsert_requests;
        tarantool_factory_mempool* tarantool_space_iterator_requests;
        tarantool_factory_mempool* tarantool_index_requests;
        tarantool_factory_mempool* tarantool_index_count_requests;
        tarantool_factory_mempool* tarantool_index_id_requests;
        tarantool_factory_mempool* tarantool_index_update_requests;
        tarantool_factory_mempool* tarantool_index_iterator_requests;
        tarantool_factory_mempool* tarantool_index_select_requests;
        tarantool_factory_mempool* tarantool_index_index_ids;
    };