dart/lib/storage/bindings.dart


  external ffi.Pointer<ffi.Char> operations;

  @ffi.Size()
  external int operations_size;

  @ffi.Uint32()
  external int space_id;
}

final class tarantool_space_iterator_request extends ffi.Struct {
  @ffi.Size()
  external int key_size;

  external ffi.Pointer<ffi.Char> key;

  @ffi.Uint32()
  external int space_id;

  @ffi.Int()
  external int type;
}

final class tarantool_index_request extends ffi.Struct {
  @ffi.Size()
  external int tuple_size;

  external ffi.Pointer<ffi.Char> tuple;

  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int index_id;
}

final class tarantool_index_count_request extends ffi.Struct {
  @ffi.Size()
  external int key_size;

  external ffi.Pointer<ffi.Char> key;

  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int index_id;

  @ffi.Int()
  external int iterator_type;
}

final class tarantool_index_id_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  @ffi.Size()
  external int name_length;

  @ffi.Uint32()
  external int space_id;
}

final class tarantool_index_update_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  @ffi.Size()
  external int key_size;

  external ffi.Pointer<ffi.Char> operations;

  @ffi.Size()
  external int operations_size;

  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int index_id;
}

final class tarantool_call_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> function;

  external ffi.Pointer<ffi.Char> input;

  @ffi.Size()
  external int input_size;

  @ffi.Uint32()
  external int function_length;
}

final class tarantool_evaluate_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> expression;

  external ffi.Pointer<ffi.Char> input;

  @ffi.Size()
  external int input_size;

  @ffi.Uint32()
  external int expression_length;
}

final class tarantool_index_iterator_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  @ffi.Size()
  external int key_size;

  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int index_id;

  @ffi.Int()
  external int type;
}

final class tarantool_index_select_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  @ffi.Size()
  external int key_size;

  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int index_id;

  @ffi.Uint32()
  external int offset;

  @ffi.Uint32()
  external int limit;

  @ffi.Int()
  external int iterator_type;
}

final class tarantool_index_id extends ffi.Struct {
  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int index_id;
}

final class tarantool_native_module_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> module_name;

  @ffi.Size()
  external int module_name_length;
}

final class tarantool_native_function_request extends ffi.Struct {
  external ffi.Pointer<ffi.Char> module_name;

  external ffi.Pointer<ffi.Char> function_name;

  @ffi.Size()
  external int module_name_length;
}

final class tarantool_configuration extends ffi.Struct {
  external ffi.Pointer<ffi.Char> initial_script;

  external ffi.Pointer<ffi.Char> library_path;

  external ffi.Pointer<ffi.Char> binary_path;

  @ffi.Uint64()
  external int cqe_wait_timeout_millis;

  @ffi.Size()
  external int quota_size;

  @ffi.Size()
  external int preallocation_size;

  @ffi.Size()
  external int slab_size;

  @ffi.Size()
  external int static_buffers_capacity;

  @ffi.Size()
  external int static_buffer_size;

  @ffi.Size()
  external int ring_size;

  @ffi.Uint64()
  external int initialization_timeout_seconds;

  @ffi.Uint64()
  external int shutdown_timeout_seconds;

  @ffi.Size()
  external int box_output_buffer_capacity;

  @ffi.Size()
  external int executor_ring_size;

  @ffi.Int32()
  external int ring_flags;

  @ffi.Uint32()
  external int cqe_wait_count;

  @ffi.Uint32()
  external int cqe_peek_count;
}

final class tarantool_executor_configuration extends ffi.Struct {
  @ffi.Size()
  external int executor_ring_size;

  external ffi.Pointer<tarantool_configuration> configuration;

  @ffi.Uint32()
  external int interactor_id;
}

final class tuple extends ffi.Opaque {}

final class port extends ffi.Opaque {}

final class tuple_iterator extends ffi.Opaque {}

final class port_c_entry extends ffi.Opaque {}

typedef tarantool_tuple_port_entry_t = port_c_entry;
typedef tarantool_tuple_port_t = port;
typedef tarantool_tuple_t = tuple;

final class mempool extends ffi.Opaque {}

final class small_alloc extends ffi.Opaque {}

final class tarantool_factory extends ffi.Struct {
  external ffi.Pointer<tarantool_factory_small_alloc> tarantool_datas;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_messages;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_call_requests;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_evaluate_requests;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_space_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_space_count_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_space_select_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_space_update_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_space_upsert_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_space_iterator_requests;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_index_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_index_count_requests;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_index_id_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_index_update_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_index_iterator_requests;

  external ffi.Pointer<tarantool_factory_mempool>
      tarantool_index_select_requests;

  external ffi.Pointer<tarantool_factory_mempool> tarantool_index_index_ids;
}

typedef tarantool_factory_small_alloc = small_alloc;
typedef tarantool_factory_mempool = mempool;
typedef tarantool_factory_interactor_memory
    = linux_interactor_bindings.interactor_memory;
